# feroxyl

./: .gitmodules  AGENTS.md  Cargo.toml  README.md  crane.nix  deny.toml  docker.nix  flake.nix  treefmt.nix
.github/workflows/: checks.yml  docker.yml
docs/engine/: README.md
src/: api.rs  lib.rs  main.rs  scrape.rs
src/engine/: bing.rs  bing_images.rs  brave.rs  ddg.rs  ddg_news.rs  google.rs  google_images.rs  mod.rs  startpage.rs  startpage_images.rs  unsplash.rs  yahoo.rs  yandex.rs
src/engine/ddg/: definitions.rs  mod.rs  news.rs  web.rs
src/engine/yahoo/: mod.rs  news.rs  web.rs
src/server/: api.rs  mod.rs  view.rs
tests/: api.rs  search_providers.rs
