[package]
name = "feroxyl"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
] }
scraper = "0.25.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
