[package]
name = "feroxyl"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
html5ever = "0.38.0"
markup5ever_rcdom = "0.38.0"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
  "cookies",
  "gzip",
  "brotli",
  "deflate",
] }
scraper = "0.25.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = "0.5"
