[package]
name = "feroxyl"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
clap = { version = "4.5.60", features = ["derive"] }
html5ever = "0.38.0"
markup = "0.16.0"
markup5ever_rcdom = "0.38.0"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
  "cookies",
  "gzip",
  "brotli",
  "deflate",
] }
scraper = "0.25.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tower = "0.5"
